# Models/DTOs/Enums.cs
@@ -1,0 +1,11 @@
+﻿namespace Models
+{
+    public enum MealType
+    {
+        Breakfast,
+        Brunch,
+        Lunch,
+        AfternoonSnack,
+        Dinner,
+    }
+}
